--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
 
 
 
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/bap-ssbm?tab=repositories">Kentaro</a>.
-  </div>
+  </footer>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   <script src="index.js"></script>
 </body>
